build/yaml/opal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opal-webapp-service
                port:
                  number: 80
